# LED-Automation

./: .env.example  .gitignore  docker-compose.yml  main.py  package-lock.json
app/Jobs/: ProcessReferenceBatch.php  RetrieveReportOutput.php
app/Models/: GenerationRun.php  ReferenceBatch.php  Report.php  ReportOutput.php  ReportReference.php  (+2 more)
config/: app.php  database.php  queue.php  services.php
docs/: fastapi-automation.md
routes/: web.php
services/rag-api/: .env.example  README.md  main.py  pyproject.toml  requirements.txt
services/rag-api/storage/report-outputs/: cb12e1b0-fd32-454c-8ab6-02ab373aec23-penetapan-00a8ce8b-d1e6-437c-94c0-ea0a34fc0aaf.json  cb12e1b0-fd32-454c-8ab6-02ab373aec23-penetapan-013e26f1-8555-420d-88d6-7be1031f8833.json  cb12e1b0-fd32-454c-8ab6-02ab373aec23-penetapan-344f8408-038b-4632-acac-87403b4d47da.json  cb12e1b0-fd32-454c-8ab6-02ab373aec23-penetapan-3f9be35f-d06e-4fbe-8596-bb71326fcaa1.json  cb12e1b0-fd32-454c-8ab6-02ab373aec23-penetapan-525cefd6-707d-4d1d-b2ac-7ad4df651a30.json  cb12e1b0-fd32-454c-8ab6-02ab373aec23-penetapan-7c382893-3680-4f6c-a118-286ab9bca3f1.json  cb12e1b0-fd32-454c-8ab6-02ab373aec23-penetapan-7f7ec7d0-b22e-4b37-a955-527554f8559a.json  cb12e1b0-fd32-454c-8ab6-02ab373aec23-penetapan-80c75b33-c4ad-4d3a-8e26-bf498185d8fa.json  cb12e1b0-fd32-454c-8ab6-02ab373aec23-penetapan-c92b8a9e-7b72-44bb-a24e-2cc73df3a0d1.json  cb12e1b0-fd32-454c-8ab6-02ab373aec23-penetapan-f6a010e6-04da-4447-be10-39feda7c908e.json  cb12e1b0-fd32-454c-8ab6-02ab373aec23-penetapan-fccb3158-0fd3-4503-a184-3dca9d2924eb.json
tests/: Pest.php
(+29 files in other folders)
