[project]
name = "rag-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "docling>=2.62.0",
    "docling-core>=2.51.1",
    "fastapi>=0.121.3",
    "httpx>=0.28.1",
    "langchain-community>=0.4.1",
    "langchain-docling>=2.0.0",
    "langchain-experimental>=0.4.0",
    "langchain-huggingface>=1.0.1",
    "langchain-text-splitters>=1.0.0",
    "pypdf>=6.3.0",
    "python-dotenv>=1.2.1",
    "qdrant-client==1.14.1",
    "sentence-transformers>=5.1.2",
    "uvicorn[standard]>=0.38.0",
]
